--- a/index.html
+++ b/index.html
@@ -1,152 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Game</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
-</head>
-
-<body>
+  </head>
+  <body>
     <header class="main-nav-bar">
         <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
-            <div class="dropdown-content">
-                <script type="text/x-handlebars-template" class="char-card">
-              {{#each element}}
-            <div class="{{choiceElement}}">
+        <button class="dropbtn">Choose A Player</button>
+        <div class="dropdown-content">
+          <script type="text/x-handlebars-template" class ="char-card">
+          {{#each element}}
+            <div class="">
               <img src="{{Image}}" alt="">
-              <h3>{{choiceElement}}</h3>
-              <p>{{Description}}</p>
+              <h3 class="selected-element">{{choiceElement}}</h3>
+              <p>{{Desciption}}</p>
             </div>
             {{/each}}
             </script>
-            </div>
         </div>
-        <button type="button" name="button" class="reset reset-button">Play Again
+     </div>
+        <button type="button" name="button" class ="reset reset-button">Play Again
         </button>
     </header>
     <div class="container game-container">
         <!-- container start -->
-        <<<<<<< HEAD <div class="row justify-content-around align-items-center player-cards">
-            <div class="card col-12 col-md-5 mt-4 text-center player-card">
-                <img src="images/water-elemental.jpeg" class="card-img-top card-picture player-image"
-                    alt="element picture">
-                <div class="card-body player-card-body">
-                    <h5 class="card-title-one player-name"></h5>
-                    <div class="progress health-status">
-                        <div class="progress-bar hp-bar player-hp" role="progressbar" style="width: 100%;"
-                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
-                            =======
-                            <div class="row justify-content-around align-items-center player-cards">
-                                <div class="card col-12 col-md-5 mt-4 text-center player-card">
-                                    <img src="images/water-elemental.jpeg" class="card-img-top card-picture"
-                                        alt="element picture">
-                                    <div class="card-body player-card-body water-card">
-                                        <h5 class="card-title-one">Befrese
-                                        </h5>
-                                        <div class="progress">
-                                            <div class="progress-bar hp-bar player-hp" role="progressbar"
-                                                style="width: 100%;" aria-valuenow="100" aria-valuemin="0"
-                                                aria-valuemax="100">100%
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card col-12 col-md-5 mt-4 text-center player-card">
-                                    <img src="images/earth-elemental.jpeg" class="card-img-top card-picture"
-                                        alt="element picture">
-                                    <div class="card-body player-card-body earth-card">
-                                        <h5 class="card-title-one">Gutrium
-                                        </h5>
-                                        <div class="progress">
-                                            <div class="progress-bar hp-bar player-hp" role="progressbar"
-                                                style="width: 100%;" aria-valuenow="100" aria-valuemin="0"
-                                                aria-valuemax="100">100%
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card col-12 col-md-5 mt-4 text-center player-card">
-                                    <img src="images/fire-elemental.jpeg" class="card-img-top card-picture"
-                                        alt="element picture">
-                                    <div class="card-body player-card-body fire-card">
-                                        <h5 class="card-title-one">Vustrite
-                                        </h5>
-                                        <div class="progress">
-                                            <div class="progress-bar hp-bar player-hp" role="progressbar"
-                                                style="width: 100%;" aria-valuenow="100" aria-valuemin="0"
-                                                aria-valuemax="100">100%
-                                            </div>
-                                        </div>
-                                        >>>>>>> Fixed some typos, filled out character descriptions.
-                                    </div>
-                                </div>
-                                <<<<<<< HEAD </div>
-                                    <div class="card col-12 col-md-5 mt-4 text-center player-card">
-                                        <img src="images/wind-elemental.jpeg"
-                                            class="card-img-top card-picture comp-image" alt="card picture">
-                                        <div class="card-body comp-card-body">
-                                            <h5 class="card-title-one comp-name"></h5>
-                                            <div class="progress health-status">
-                                                <div class="progress-bar hp-bar computer-hp" role="progressbar"
-                                                    style="width: 100%;" aria-valuenow="100" aria-valuemin="0"
-                                                    aria-valuemax="100">100%
-                                                    =======
-                                                    <div class="card col-12 col-md-5 mt-4 text-center player-card">
-                                                        <img src="images/wind-elemental.jpeg"
-                                                            class="card-img-top card-picture" alt="element picture">
-                                                        <div class="card-body player-card-body wind-card">
-                                                            <h5 class="card-title-one">Uthine the Wind Knight
-                                                            </h5>
-                                                            <div class="progress">
-                                                                <div class="progress-bar hp-bar player-hp"
-                                                                    role="progressbar" style="width: 100%;"
-                                                                    aria-valuenow="100" aria-valuemin="0"
-                                                                    aria-valuemax="100">100%
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="card col-12 col-md-5 mt-4 text-center player-card">
-                                                        <img src="images/water-elemental.jpeg"
-                                                            class="card-img-top card-picture" alt="card picture">
-                                                        <div class="card-body comp-card-body">
-                                                            <h5 class="card-title">Computer Name
-                                                            </h5>
-                                                            <div class="progress">
-                                                                <div class="progress-bar hp-bar computer-hp"
-                                                                    role="progressbar" style="width: 100%;"
-                                                                    aria-valuenow="100" aria-valuemin="0"
-                                                                    aria-valuemax="100">100%
-                                                                </div>
-                                                            </div>
-                                                            >>>>>>> Fixed some typos, filled out character descriptions.
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="game-feed">
-                                                    <section class="game-feed-player">
-                                                        <p class="card-text player-status"></p>
-                                                        <!-- </section>
+      <div class="row justify-content-around align-items-center player-cards">
+          <div class="card col-12 col-md-5 mt-4 text-center player-card">
+            <img src="images/water-elemental.jpeg" class="card-img-top card-picture player-image" alt="element picture">
+            <div class="card-body player-card-body">
+              <h5 class="card-title-one player-name"></h5>
+              <div class="progress health-status">
+                <div class="progress-bar hp-bar player-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card col-12 col-md-5 mt-4 text-center player-card">
+            <img src="images/wind-elemental.jpeg" class="card-img-top card-picture comp-image" alt="card picture">
+            <div class="card-body comp-card-body">
+              <h5 class="card-title-one comp-name"></h5>
+              <div class="progress health-status">
+                <div class="progress-bar hp-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <div class="game-feed">
+        <section class="game-feed-player">
+          <p class="card-text player-status"></p>
+        <!-- </section>
         <section class="game-feed-comp"> -->
-                                                        <p class="card-text comp-status"></p>
-                                                    </section>
-                                                </div>
-                                                <section class="row align-items-center bottom-buttons">
-                                                    <button type="button" name="attack" class="attack-button">Attack!
-                                                    </button>
-                                                </section>
-                                            </div> <!-- container end  -->
-                                            <script
-                                                src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-                                            <script src='./scripts/char-types.js'></script>
-                                            <script src="./scripts/main.js"></script>
-                                            <script src="./scripts/handlebars-pg.js"> </script>
+          <p class="card-text comp-status"></p>
+        </section>
+      </div>
+        <section class="row align-items-center bottom-buttons">
+          <button type="button" name="attack" class="attack-button">Attack!
+          </button>
+        </section>
+    </div> <!-- container end  -->
+        <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+        <script src='./scripts/char-types.js'></script>
+        <script src="./scripts/main.js"></script>
+        <script src="./scripts/handlebars-pg.js"> </script>
 </body>
-
 </html>
